abovevtt.css
/* ... */
.text-input-title-bar-enter:hover {
    background: #ddd3;
    transition: all linear 0.2s;
    cursor: pointer;
}
 
.text-input-title-bar-exit svg,
.text-input-title-bar-exittitle-bar-exit svg,
.resize_drag_window .title_bar .title_bar_close_button svg,
#text_controller_title_bar_exit svg,
#combat_tracker_title_bar_exit svg,
#monster_close_title_button svg,
#player_close_title_button svg,
#reload_player_frame_button svg,
#token_options_title_bar_exit svg,
.popout-button svg{
    height: 20px;
    width: 20px;
}

.text-input-title-bar-exit svg g rect,
.title-bar-exit svg g rect,
.resize_drag_window .title_bar .title_bar_close_button svg g rect,
#text_controller_title_bar_exit svg g rect,
#combat_tracker_title_bar_exit svg g rect,
#monster_close_title_button svg g rect,
#player_close_title_button svg g rect,
#token_options_title_bar_exit svg g rect{
    height: 80px;
    width: 10px;
    fill: #ddd;
    transform: translate(45px, 10px);
}

.popout-button svg path:not([fill='none']){
    fill: #ddd;
}

.journal-button.popout-button svg path:not([fill='none']){
    fill: #878787; 
}

.journal-button.popout-button:hover svg path:not([fill='none']){
    fill: #000; 
}

.text-input-title-bar-enter {
    fill: #ddd;
    position: absolute;
    right: 30px;
    width: 20px;
    height: 20px;
    top: 2px;
}

.text-input-title-bar-exit,
.title-bar-exit,
.resize_drag_window .title_bar .title_bar_close_button,
#text_controller_title_bar_exit,
#combat_tracker_title_bar_exit,
#monster_close_title_button,
#player_close_title_button,
#token_options_title_bar_exit{
    position: absolute;
    right: 5px;
    width: 20px;
    height: 20px
}
#combat_tracker_title_bar_settings{
    position: absolute;
    right: 55px;
    width: 20px;
    height: 20px
}
#combat_tracker_title_bar_settings span{
    height: 20px;
    width: 20px;
    font-size: 20px;
    line-height: 25px;
    color: #ddd;
}
.popout-button {
    position: absolute;
    right: 30px;
    width: 20px;
    height: 20px
}
#reload_player_frame_button{
    position: absolute;
    right: 30px;
    width: 20px;
    height: 20px;
}

#monster_close_title_button,
#player_close_title_button,
#reload_player_frame_button,
.text-input-title-bar-exit,
.title-bar-exit,
.resize_drag_window .title_bar .title_bar_close_button,
#text_controller_title_bar_exit,
#combat_tracker_title_bar_exit,
#token_options_title_bar_exit,
.popout-button {
    top: 2px;
}
.ct-sidebar__inner .glc-game-log .abovevtt-sidebar-injected *{
    color: rgb(92, 112, 128);
}
.glc-game-log .popout-button{
    position: relative;
    display: inline; 
    padding-left: 3px;
    vertical-align: top;
    right: 0;
    filter: none;
}
.glc-game-log .popout-button path:not([fill='none']){
    fill: #000;
    right: 0;
} 
.glc-game-log [class*='-Result']>[class*='-Line-Title-'] {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: flex-start;
}

.glc-game-log [class*='-Result']>[class*='-Line-Title-']{
    visibility: hidden;
    font-size:0px;
}
.glc-game-log [class*='-Result']>[class*='-Line-Title-'] span{
    font-size:12px;
    max-width:100%;
    overflow:hidden;
    visibility: visible;
    text-overflow: ellipsis;
    white-space:nowrap;
}
.journal-button{
    filter: none;
    border: 1px solid #c5c5c5;
    background: #f6f6f6;
    font-weight: normal;
    position: absolute;
    right: 33px;
    top: 9px;
    width: 20px;
    height: 20px;
    border-radius: 3px;

}
.journal-button svg{
    padding: 2px 1px 2px 0px;
}
    

#combat_tracker_inside #endplayerturn{
    pointer-events: none;
    background: #ddd;
    color: #888;
    opacity: 0.5;
    padding:0px;
}
.body-rpgcharacter-sheet #combat_tracker_inside #combat_footer{
    padding-top:5px;
}
#combat_tracker_inside #endplayerturn.enabled,
#combat_tracker_inside #endplayerturn.enabled:hover{
    pointer-events:all;
    color:#fff;
    background: #c53131;
    opacity: 1;
}
#combat_tracker_inside #endplayerturn.enabled:active{
    transform: translate(-1px, 1px);
    box-shadow: inset 1px 1px 4px 0px #0008;
}

#tokenOptionsPopup{
    position: fixed;
    z-index: 59000;
    background: #fff;
    border-radius: 10px;
    width: 245px;
    max-height: 100%;
}
.aboveDiceTotal{
    display: block;
    text-align: center;
    font-weight: 700;
    font-size: 23px;
    font-family: Roboto,Open Sans,Helvetica,sans-serif;
    color: rgb(92, 112, 128);
}
.aboveDiceOutput{
    width:181px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-family: "Roboto Condensed", "Arial Narrow", "Helvetica Neue", Helvetica, Arial, sans-serif;
    text-transform: uppercase;
    font-weight: 700;
    color: rgb(92, 112, 128);
    line-height: 1;
}

[class*='Line-Title'] .aboveDiceOutput .skill-tooltip{
    color: rgb(92, 112, 128) !important;
}

.abovevtt-roll-check,
.abovevtt-roll-skill{
    color: rgb(181, 93, 255);
}
.abovevtt-roll-save,
.abovevtt-roll-heal{
    color: rgb(108, 191, 91);
}
.abovevtt-roll-damage{
    color: rgb(223, 123, 123);
}
.abovevtt-roll-attack,
.abovevtt-roll-to-hit{
    color: rgb(27, 154, 240);
}
.abovevtt-roll-custom,
.abovevtt-roll-initiative,
.abovevtt-roll-roll{
    color: rgb(245, 166, 35);
}

.abovevtt-mon-stat-block__separator{
    max-width: 100%;
    max-height: 1rem;
    min-height: 10px;
    margin: 0px;
    background: url('https://media-waterdeep.cursecdn.com/file-attachments/0/579/stat-block-header-bar.svg') center center no-repeat;
}

#tokenOptionsContainer{
    overflow: hidden auto;
    padding: 5px;
    width: 100%;
    height: 100%;
}
#tokenOptionsContainer div, 
#tokenOptionsContainer h3 {
    font-size: 10px;
}
#tokenOptionsContainer h3,
.token-config-aura-wrapper .token-image-modal-footer-select-wrapper,
.token-image-modal-footer-title,
.menu-outer-aura,
.menu-inner-aura,
.menu-vision-aura {
    display: flex;
    align-self: center;
    line-height: 20px;
}   
/* ... */

